<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskItemCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="6dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="6dp"
    android:background="@color/blue_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Task Title -->
        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textColor="@color/blue_5"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium" />

        <!-- Task Description -->
        <TextView
            android:id="@+id/text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/task_description_goes_here"
            android:textColor="#00838F"
            android:textSize="14sp" />

        <!-- Date and Priority Horizontal Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:paddingEnd="30dp"
                android:text="@string/due_30_07_2025"
                android:textColor="#DD2C00"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/text_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:text="@string/priority_high"
                android:textColor="#3F51B5"
                android:textSize="13sp"
                android:textStyle="italic"
                android:layout_gravity="end"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
