<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_1"
    tools:context=".ui.CompletedTaskActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/blue_3"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fontFamily="@font/castoro_titling"
        android:gravity="center"
        android:text="@string/add_task_heading"
        android:textColor="@color/blue_5"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <ScrollView
        android:id="@+id/addEditLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:ignore="RedundantNamespace">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/title"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/blue_5"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="10dp"
                android:textColor="@color/blue_5"
                android:textColorHint="#757575"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/select_date_dd_mm_yyyy"
                android:inputType="none"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/blue_5"
                android:textColorHint="#757575"
                android:textSize="16sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <Spinner
                android:id="@+id/spinner_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/blue_5"
                android:background="@drawable/spinner_bg"
                tools:ignore="TouchTargetSizeCheck" />


            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save_task"
                android:backgroundTint="@color/blue_2"
                android:textColor="@color/blue_5"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
